# hulk

./: Cargo.toml
crates/code_generation/src/: execution.rs
crates/control/: Cargo.toml
crates/control/src/: ball_filter.rs  lib.rs  odometry.rs  orientation_filter.rs  path_planner.rs  role_assignment.rs  time_to_reach_kick_position.rs
crates/geometry/: Cargo.toml
crates/geometry/src/: angle.rs  arc.rs  circle.rs
crates/hulk/: Cargo.toml
crates/hulk_behavior_simulator/src/: fake_data.rs
crates/hulk_replayer/: Cargo.toml  build.rs
crates/linear_algebra/src/: rotation.rs
crates/partial/: Cargo.toml
crates/partial/src/: lib.rs
crates/partial/tests/: tests.rs
crates/partial_derive/: Cargo.toml
crates/partial_derive/src/: lib.rs
crates/path_serde/src/: implementation.rs  not_supported.rs
crates/repository/src/: lib.rs
crates/spl_network/: Cargo.toml
crates/spl_network/src/: endpoint.rs
crates/spl_network_messages/src/: lib.rs
crates/step_planning/: Cargo.toml
crates/step_planning/src/: geometry.rs  loss_fields.rs  step_plan.rs  traits.rs  utils.rs
crates/step_planning/src/geometry/: angle.rs  path.rs  pose.rs
crates/step_planning/src/loss_fields/: path_distance.rs  path_progress.rs  step_planning.rs  step_size.rs
crates/step_planning/src/traits/: length.rs  path_progress.rs  project.rs  scaled_gradient.rs  wrap_dual.rs
crates/step_planning/src/utils/: smoothmin.rs
crates/step_planning_solver/: Cargo.toml
crates/step_planning_solver/src/: lib.rs  main.rs
etc/parameters/: default.json
tools/twix/: Cargo.toml
(+21 files in other folders)
