[package]
name = "geometry"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
approx = { workspace = true }
approx_derive = { workspace = true }
linear_algebra = { workspace = true }
nalgebra = { workspace = true }
num-traits = { workspace = true }
path_serde = { workspace = true }
serde = { workspace = true }
coordinate_systems = { workspace = true }
