[package]
name = "step_planning"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
approx.workspace = true
color-eyre.workspace = true
itertools.workspace = true
nalgebra.workspace = true
num-dual.workspace = true
num-traits.workspace = true
