[package]
name = "step_planning_solver"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
argmin.workspace = true
argmin-math.workspace = true
color-eyre.workspace = true
nalgebra.workspace = true
num-dual.workspace = true
step_planning.workspace = true
